Fri Jun 24 15:23:38 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/setup.pl:

          Build and run the new modelvalidation tool as part of the test
          setup step.  This will cause an error to be seen if any of the
          .opendds files under this directory are no longer valid according
          to the .xsd schemas in plugins/org.opendds.modeling.model/model.

Fri Jun 24 14:04:27 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/idl.xsl:

          Protect generated IDL from multiple inclusion
          with #ifndef/#define/#endif

Thu Jun 23 21:12:50 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/validation/modelvalidation/build.xml:
        * tools/modeling/validation/modelvalidation/docs/README:
        * tools/modeling/validation/modelvalidation/lib/test/junit-4.4.jar:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.bat:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.sh:

          Added junit-4.4.jar file needed for ant build.xml to run tests.
          Changed how the tool is packaged.

Thu Jun 23 20:02:41 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * NEWS:

          Added NEWS items for a few of the major changes since last release.

Thu Jun 23 17:14:40 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/validation/modelvalidation/build.properties:
        * tools/modeling/validation/modelvalidation/build.xml:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.bat:
        * tools/modeling/validation/modelvalidation/resources/openddsvalidate.sh:
        * tools/modeling/validation/modelvalidation/src/java/com/ociweb/xml/util/XMLUtil.java:
        * tools/modeling/validation/modelvalidation/src/java/log4j.xml: